force-app/main/default/objects/IFTTT_Message__c/IFTTT_Message__c.object-meta.xml
<CustomObject>
    <label>IFTTT Message</label>
    <nameField>
        <displayFormat>M-{00000000}</displayFormat>
        <label>IFTTT Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IFTTT Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>