force-app/main/default/objects/IFTTT_Message__c/fields/Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>Acknowledged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Some processes may want only to handle a message once so will set this to True once it has been handled</description>
    <label>Acknowledged</label>
    <type>Checkbox</type>
</CustomField>