force-app/main/default/objects/IFTTT_Message__c/fields/Alert_Combo__c.field-meta.xml
<CustomField>
    <fullName>Alert_Combo__c</fullName>
    <description>Concatenated field used to drive IFTTT alerts.  At time of writing, a value of 'TRUE-Badge' is used to trigger a badge alert and 'True-Fatal' sends an error message.  This is required as it looks like the IFTTT filter criteria only allows checking the value of a single field</description>
    <formula>IF(IFTTT_Message__c  = TRUE, 'TRUE-', 'FALSE-')  &amp; 
 IF (ISPICKVAL(Severity__c, 'Information'),'Information', '') &amp;  
 IF (ISPICKVAL(Severity__c, 'Warning'),'Warning', '') &amp;  
 IF (ISPICKVAL(Severity__c, 'Severe'),'Severe', '') &amp; 
 IF (ISPICKVAL(Severity__c, 'Fatal'),'Fatal', '') &amp;  
 IF (ISPICKVAL(Severity__c, 'IFTTT'),'IFTTT', '') &amp;  
 IF (ISPICKVAL(Severity__c, 'Badge'),'Badge', '')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alert_Combo</label>
    <type>Text</type>
</CustomField>