force-app/main/default/objects/IFTTT_Message__c/fields/IFTTT_Message__c.field-meta.xml
<CustomField>
    <fullName>IFTTT_Message__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, then IFTTT will pick the message up and process it</description>
    <label>IFTTT Message</label>
    <type>Checkbox</type>
</CustomField>