force-app/main/default/objects/IFTTT_Message__c/fields/Message_Source__c.field-meta.xml
<CustomField>
    <fullName>Message_Source__c</fullName>
    <description>The name of the process, trigger or class that created the message record</description>
    <label>Message Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>