force-app/main/default/objects/IFTTT_Message__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Information</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Severe</fullName>
            </value>
            <value>
                <fullName>Fatal</fullName>
            </value>
            <value>
                <fullName>IFTTT</fullName>
            </value>
            <value>
                <fullName>Badge</fullName>
            </value>
            <value>
                <fullName>Delay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>